--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>React Stocks!</title>
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="stylesheets/stocks.css">
 </head>
 <body>
 
